2010-01-07  Adam Barth  <abarth@webkit.org>

        Reviewed by Maciej Stachowiak.

        Add prepare and post to webkit-patch main help
        https://bugs.webkit.org/show_bug.cgi?id=33313

        * Scripts/webkitpy/commands/upload.py:

2010-01-07  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Add Chromium bots to the list of "core builders" (builders which stop the commit-queue when they turn red)
        https://bugs.webkit.org/show_bug.cgi?id=33290

        Add the Chromium builders to our list of core builders and test that our regexps work.
        I also updated our regexp testing to make sure we cover all known builders at build.webkit.org.

        * Scripts/webkitpy/buildbot.py:
        * Scripts/webkitpy/buildbot_unittest.py:

2010-01-07  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        bugzilla-tool needs a new name
        https://bugs.webkit.org/show_bug.cgi?id=28459

        Rename bugzilla-tool to webkit-patch.  Also, rename some commands to
        make more sense with the new name.

        * Scripts/bugzilla-tool: Removed.
        * Scripts/webkit-patch: Added.
        * Scripts/webkit-tools-completion.sh:
        * Scripts/webkitpy/bugzilla_unittest.py:
        * Scripts/webkitpy/commands/download.py:
        * Scripts/webkitpy/commands/download_unittest.py:
        * Scripts/webkitpy/commands/early_warning_system.py:
        * Scripts/webkitpy/commands/queries.py:
        * Scripts/webkitpy/commands/queues.py:
        * Scripts/webkitpy/commands/queues_unittest.py:
        * Scripts/webkitpy/commands/upload.py:
        * Scripts/webkitpy/commands/upload_unittest.py:
        * Scripts/webkitpy/queueengine.py:
        * Scripts/webkitpy/steps/completerollout.py:

2010-01-07  Chris Jerdonek  <chris.jerdonek@gmail.com>

        Reviewed by Eric Seidel.

        Moved style-related modules to webkitpy.style sub-package.

        https://bugs.webkit.org/show_bug.cgi?id=32971
